@@ -1,16 +1,20 @@
 package com.sergeev.srp.marytts.MaryTTS.Service;
 
 import com.sergeev.srp.common.model.TextToSpeech;
+import com.sergeev.srp.common.model.file.AudioFileMetadata;
+import lombok.extern.log4j.Log4j2;
 import marytts.LocalMaryInterface;
 import marytts.MaryInterface;
 import marytts.exceptions.MaryConfigurationException;
 import marytts.exceptions.SynthesisException;
+import org.apache.commons.io.IOUtils;
 import org.springframework.stereotype.Service;
 
 import javax.sound.sampled.AudioInputStream;
 import java.io.IOException;
 
 @Service
+@Log4j2
 public class TextToSpeechService {
     private MaryInterface marytts;
 
@@ -18,10 +22,20 @@ public class TextToSpeechService {
         this.marytts = new LocalMaryInterface();
     }
 
-    public byte[] textToSpeech(TextToSpeech text) throws SynthesisException, IOException {
+    public TextToSpeech textToSpeech(TextToSpeech text) throws SynthesisException, IOException {
 
         try (AudioInputStream audioInputStream = marytts.generateAudio(text.getText())) {
-            return audioInputStream.readAllBytes();
+            log.info("Успешно сгенерирован речевой сигнал длины {}", audioInputStream.getFrameLength());
+
+            text.setAudio(IOUtils.toByteArray(audioInputStream));
+            AudioFileMetadata metadata = new AudioFileMetadata();
+            metadata.setChannels(audioInputStream.getFormat().getChannels());
+            metadata.setSampleRate(audioInputStream.getFormat().getSampleRate());
+            metadata.setSampleSizeInBits(audioInputStream.getFormat().getSampleSizeInBits());
+            metadata.setSigned(true);
+            metadata.setBigEndian(audioInputStream.getFormat().isBigEndian());
+            text.setMetadata(metadata);
+            return text;
         }
     }
 }
